# psamfinder

./: .gitignore  LICENSE  README.md  pyproject.toml
psamfinder/: __main__.py  cli.py  finder.py
